2002-10-14  Jordi Mallach  <jordi@sindominio.net>

	* intdiv0.m4: New file, from gettext 0.11.5.
	* inttypes-pri.m4: New file, from gettext 0.11.5.
	* inttypes.m4: New file, from gettext 0.11.5.
	* inttypes_h.m4: New file, from gettext 0.11.5.
	* stdint_h.m4: New file, from gettext 0.11.5.
	* uintmax_t.m4: New file, from gettext 0.11.5.
	* ulonglong.m4: New file, from gettext 0.11.5.

2002-06-28  Jordi Mallach  <jordi@sindominio.net>

	* Makefile.am: removed gnome-macros.dep from EXTRA_DIST.
	* gnome.m4: New file, from gnome-common 1.2.4.
	* gnome-common.m4: Likewise.
	* gnome-fileutils.m4: Likewise.
	* gnome-ghttp-check.m4: Likewise.
	* gnome-gnorba-check.m4: Likewise.
	* gnome-libgtop-check.m4: Likewise.
	* gnome-objc-checks.m4: Likewise.
	* gnome-orbit-check.m4: Likewise.
	* gnome-pthread-check.m4: Likewise.
	* gnome-support.m4: Likewise.
	* gnome-undelfs.m4: Likewise.
	* gnome-x-checks.m4: Likewise.

2002-06-28  Jordi Mallach  <jordi@sindominio.net>

	* codeset.m4: New file, from gettext-0.11.2.
	* gettext.m4: New file, from gettext-0.11.2.
	* glibc21.m4: New file, from gettext-0.11.2.
	* iconv.m4: New file, from gettext-0.11.2.
	* isc-posix.m4: New file, from gettext-0.11.2.
	* lcmessage.m4: New file, from gettext-0.11.2.
	* lib-ld.m4: New file, from gettext-0.11.2.
	* lib-link.m4: New file, from gettext-0.11.2.
	* lib-prefix.m4: New file, from gettext-0.11.2.
	* progtest.m4: New file, from gettext-0.11.2.
	* Makefile.am: New file.
