@@ -1,3 +1,7 @@
+2002-10-17  Jordi Mallach  <jordi@sindominio.net>
+
+	* Makefile.am (EXTRA_DIST): added missing macros.
+
 2002-10-14  Jordi Mallach  <jordi@sindominio.net>
 
 	* intdiv0.m4: New file, from gettext 0.11.5.
